packages/fuels-macros/tests/ui/setup_contract_test_macro/contract_not_generated.rs
use fuels_macros::setup_contract_test;

setup_contract_test!(Deploy(
    name = "some_instance",
    contract = "SomeUnknownContract",
    wallet = "some_wallet"
));

fn main() {}
